k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-k8s-service
spec:
  selector:
    app: secure-k8s-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
